--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,103 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#020B11"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:id="@+id/pulau"
+        android:layout_width="match_parent"
+        android:layout_height="365dp"
+        android:background="@drawable/perimari"
+        android:scaleType="centerCrop"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="48dp" />
+
     <TextView
+        android:id="@+id/indo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Amellia Kurniaty"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="28dp"
+        android:text="INDONESIA"
+        android:textColor="#fff"
+        android:textSize="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/pSeribu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="652dp"
+        android:text="PULAU SERIBU"
+        android:textColor="#fff"
+        android:textSize="26dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.531"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/play"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="@drawable/btnplay"
+        android:layout_marginTop="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pSeribu"
+         />
+
+    <TextView
+        android:id="@+id/deskripsi"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="24dp"
+        android:text="Description"
+        android:textColor="#4F4F4F"
+        android:textSize="25dp"
+        app:layout_constraintTop_toBottomOf="@id/pulau"/>
+
+    <TextView
+        android:id="@+id/pertama"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
+        android:lineHeight="28dp"
+        android:text="Green bridge from Seatle is really awesome to get the hot spot for traveller who is traveling right there with their families."
+        android:textColor="#fff"
+        android:textSize="19dp"
+        app:layout_constraintTop_toBottomOf="@id/deskripsi"
+        />
+
+    <TextView
+        android:id="@+id/kedua"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="24dp"
+        android:lineHeight="28dp"
+        android:text="Simply dummy text something is nice but you have to aware about the branding of the product itself so keep it happy and make it more fancy."
+        android:textColor="#fff"
+        android:textSize="19dp"
+        app:layout_constraintTop_toBottomOf="@id/pertama"
+        />
+
+    <Button
+        android:layout_width="290dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/btnbuy"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/kedua"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
